docs(developing molgenis): updated developer documentation to work with Docke
Removed all the prerequisites and moved to docker to use when testing the backend as well.